[package]
name = "node_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
