[package]
name = "node_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header", "cookie-signed"] }
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.19"
serde_json = "1.0.139"
typetag = "0.2.19"
axum-macros = "0.5.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
cookie = "0.18.1"

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Enable serialization/deserialization of UUIDs
]
